objects/zqu__QuoteRatePlanCharge__c.object
<CustomObject>
    <description>A QuoteRatePlanCharge, like QuoteRatePlan, is part of a Quote.</description>
    <fields>
        <fullName>zqu__Apply_Discount_To_One_Time_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To One Time Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Recurring_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Recurring Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Apply_Discount_To_Usage_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Discount To Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <description>Bill Cycle Day of RatePlan Charge</description>
        <label>Bill Cycle Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleType__c</fullName>
        <label>Bill Cycle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultFromCustomer</fullName>
                </value>
                <value>
                    <fullName>SpecificDayofMonth</fullName>
                </value>
                <value>
                    <fullName>SubscriptionStartDay</fullName>
                </value>
                <value>
                    <fullName>ChargeTriggerDay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingPeriodAlignment__c</fullName>
        <label>Billing Period Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AlignToCharge</fullName>
                </value>
                <value>
                    <fullName>AlignToSubscriptionStart</fullName>
                </value>
                <value>
                    <fullName>AlignToTermStart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ChargeType__c</fullName>
        <label>ChargeType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Discount_Level__c</fullName>
        <label>Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RatePlan</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>zqu__EffectivePrice__c</fullName>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__FeeType__c</fullName>
        <label>FeeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__IncludedUnits__c</fullName>
        <label>Included Units</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ListTotal__c</fullName>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <inlineHelpText>Monthly Recurring Revenue</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PreviewedMRR__c</fullName>
        <description>MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PreviewedTCV__c</fullName>
        <description>TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__PriceChangeOption__c</fullName>
        <label>Price Change Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NoChange</fullName>
                </value>
                <value>
                    <fullName>SpecificPercentageValue</fullName>
                </value>
                <value>
                    <fullName>UseLatestProductCatalogPricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PriceIncreasePercentage__c</fullName>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeZuoraId__c</fullName>
        <description>corresponding Id with Product Catalog on remote zuora server</description>
        <label>Product Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan Charge associated with a Product Rate Plan Charge.</description>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanChargeZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlan__c</fullName>
        <description>The identification of the rate plan that this charge applies to.</description>
        <label>Quote Rate Plan</label>
        <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plan Charges</relationshipLabel>
        <relationshipName>Quote_Rate_Plan_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__SpecificBillingPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Customizes the number of month for the charges billing period. This field is required if you set the value of the BillingPeriod field to Specific Months.</description>
        <label>Specific Billing Period</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionRatePlanChargeZuoraId__c</fullName>
        <description>The identification number of the subscription rate plan charge that the amendment is modifying. Required if AmendmentType is set to UpdateProduct.</description>
        <label>Subscription Rate Plan Charge Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <inlineHelpText>Total Contract Value</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerDate__c</fullName>
        <description>The date when the charge becomes effective, and billing begins. This field is required if the TriggerEvent field value is SpecificDate.</description>
        <inlineHelpText>The date when the charge becomes effective, and billing begins.</inlineHelpText>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__TriggerEvent__c</fullName>
        <label>Trigger Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ContractEffective</fullName>
                </value>
                <value>
                    <fullName>ServiceActivation</fullName>
                </value>
                <value>
                    <fullName>CustomerAcceptance</fullName>
                </value>
                <value>
                    <fullName>SpecificDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__UOM__c</fullName>
        <label>UOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <label>Upto How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Rate Plan Charge</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Rate Plan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Quantity_must_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>zqu__Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Quantity__c</errorDisplayField>
        <errorMessage>Quantity must greater than 0</errorMessage>
    </validationRules>
</CustomObject>